[package]
name = "pgb-iam"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
aws-config = "1"
aws-sdk-rds = "1"
aws-types = "1"
axum = "0.7"
md-5 = "0.10"
